fix(steps): resolve vertical steps connector align problem

--- a/src/steps/step-item.less
+++ b/src/steps/step-item.less
@@ -118,6 +118,7 @@
         height: calc(100% - @connector-default-icon-width - 2px);
         width: 1px;
         background: @step-line-color;
+        transform: translateX(-50%);
         position: absolute;
         left: (@connector-default-icon-width / 2 + 1px);
         top: @connector-default-icon-width + 2px;
@@ -414,6 +415,7 @@
           height: calc(100% - @dot-steps-anchor-width);
           width: 1px;
           background: @border-level-2-color;
+          transform: translateX(50%);
           position: absolute;
           left: (@dot-steps-anchor-width / 2 - 1rpx);
           top: @dot-steps-anchor-width + 1px;
